--- a/index.html
+++ b/index.html
@@ -16,33 +16,35 @@
     </header>
 
     <div class="top">
-        <div class="left">
+        <div class="item">
             <h1>This is an awesome webpage!</h1>
             <p>This is a description of the awesome webpage. You can click the button below but it wont do anything just yet.</p>
             <button>Click Me</button>
         </div>
-        <div class="right">
-            <img src="images/main.jpg" alt="Main image">
+        <div class="item">
+            <img src="images/main2.png" alt="Main image">
         </div>
     </div>
 
     <div class="main">
-        <h2>Some Random Information</h2>
-        <div class="item">
-            <img src="images/friends.jpeg" alt="friends">
-            <p>Text under image. Provides some subtext to an otherwise unknown image.</p>
-        </div>
-        <div class="item">
-            <img src="images/firework.jpg" alt="fireworks">
-            <p>Text under image. Provides some subtext to an otherwise unknown image.</p>
-        </div>
-        <div class="item">
-            <img src="images/drinks.jpg" alt="drinks">
-            <p>Text under image. Provides some subtext to an otherwise unknown image.</p>
-        </div>
-        <div class="item">
-            <img src="images/dance.jpg" alt="dance">
-            <p>Text under image. Provides some subtext to an otherwise unknown image.</p>
+        <h2><strong>Some Random Information</strong></h2>
+        <div class="container">
+            <div class="item">
+                <img src="images/friends.jpeg" alt="friends">
+                <p>Text under image. Provides some subtext to an otherwise unknown image.</p>
+            </div>
+            <div class="item">
+                <img src="images/firework.jpg" alt="fireworks">
+                <p>Text under image. Provides some subtext to an otherwise unknown image.</p>
+            </div>
+            <div class="item">
+                <img src="images/drinks.jpg" alt="drinks">
+                <p>Text under image. Provides some subtext to an otherwise unknown image.</p>
+            </div>
+            <div class="item">
+                <img src="images/dance.jpg" alt="dance">
+                <p>Text under image. Provides some subtext to an otherwise unknown image.</p>
+            </div>
         </div>
     </div>
     <div class="quote">
